--- a/.github/workflows/2.yml
+++ b/.github/workflows/2.yml
@@ -51,8 +51,8 @@ jobs:
             let message;
             if (prCount === 30) {
               message = `Thanks @${author}, and congratulations on your first PR to Oppia! 🎉 🥳\n` +
-              `By successfully resolving one more issue, you could be on your way to joining one of Oppia's esteemed core teams and get the collaborator rights.` +
-              `Tagging Developer onboarding lead : ${mention}`;
+              `By successfully resolving one more issue, you could be on your way to joining one of Oppia's esteemed core teams and get the collaborator rights.\n` +
+              `Developer onboarding lead : ${mention}`;
             } else if (prCount === 2) {
               message = `@${author} You have merged 2 PRs successfully! ${mention}`;
             } else {
