--- a/.github/workflows/2.yml
+++ b/.github/workflows/2.yml
@@ -53,14 +53,11 @@ jobs:
               message = `Thanks @${author}, and congratulations on your first PR to Oppia! 🎉 🥳\n` +
               `By successfully resolving one more issue, you could be on your way to joining one of Oppia's esteemed core teams and get the collaborator rights.\n\n` +
               `Developer onboarding lead : ${mention}`;
-            } else if (prCount === 30) {
-              message = `@${author} Congratulations on your second merged PR to Oppia! 🎉 🥳` +
-              `Since you've merged two PRs, you might be eligible to join the Oppia dev team as a collaborator. If you'd like to do that, please fill in [this form](https://forms.gle/NxPjimCMqsSTNUgu5). Thanks!` +
+            } else if (prCount === 2) {
+              message = `@${author} Congratulations on your second merged PR to Oppia! 🎉 🥳\n` +
+              `Since you've merged two PRs, you might be eligible to join the Oppia dev team as a collaborator. If you'd like to do that, please fill in [this form](https://forms.gle/NxPjimCMqsSTNUgu5). Thanks!\n\n` +
               `Developer onboarding lead : ${mention}`;
-            } else {
-              message = `Excellent! @${author} You have merged ${prCount} PRs! ${mention}`;
             }
-            
             console.log(`Message: ${message}`);
             
             await github.rest.issues.createComment({
