--- a/.github/workflows/2.yml
+++ b/.github/workflows/2.yml
@@ -11,6 +11,9 @@ jobs:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     runs-on: ubuntu-latest
     steps:
+      - name: Install dependencies
+        run: npm install sanitize-html
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
