--- a/.github/workflows/2.yml
+++ b/.github/workflows/2.yml
@@ -8,66 +8,76 @@ permissions: write-all
 
 jobs:
   comment-on-merge:
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'develop'
     runs-on: ubuntu-latest
     steps:
-      - name: Install dependencies
-        run: npm install sanitize-html
-
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Count merged PRs
-        uses: actions/github-script@v6
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const author = context.payload.pull_request.user.login;
-            const repo = context.repo.repo;
-            const owner = context.repo.owner;
-            
-            console.log(`Fetching PR author: ${author}`);
-            console.log(`Repository: ${owner}/${repo}`);
-            
-            const { data } = await github.rest.search.issuesAndPullRequests({
-              q: `repo:${owner}/${repo} type:pr state:closed author:${author}`
-            });
-            const prCount = data.items.filter(pr => pr.pull_request.merged_at).length;
-            
-            console.log(`PR Count: ${prCount}`);
-            
-            core.exportVariable('PR_COUNT', prCount);
-            core.exportVariable('AUTHOR', author);
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm install sanitize-html @actions/core @actions/github
+
+      - name: Count merged PRs and sanitize input
+        id: count-and-sanitize
+        run: |
+          const { execSync } = require('child_process');
+          const sanitizeHtml = require('sanitize-html');
+          const github = require('@actions/github');
+          const core = require('@actions/core');
+
+          const token = process.env.GITHUB_TOKEN;
+          const octokit = github.getOctokit(token);
+          const context = github.context;
+
+          const author = sanitizeHtml(context.payload.pull_request.user.login);
+          const repo = context.repo.repo;
+          const owner = context.repo.owner;
+
+          const searchQuery = `repo:${owner}/${repo} type:pr state:closed author:${author}`;
+          const { data } = await octokit.rest.search.issuesAndPullRequests({
+            q: searchQuery
+          });
+          const prCount = data.items.filter(pr => pr.pull_request.merged_at).length;
+
+          core.exportVariable('PR_COUNT', prCount);
+          core.exportVariable('AUTHOR', author);
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Comment on the PR
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const sanitizeHtml = require('sanitize-html');
             const prCount = parseInt(process.env.PR_COUNT);
             const author = process.env.AUTHOR;
             const mention = '@HardikGoyal2003';
             const prNumber = context.payload.pull_request.number;
-            
-            console.log(`PR Count: ${prCount}`);
-            
+
             let message;
-            if (prCount === 30) {
+            if (prCount === 1) {
               message = `Thanks @${author}, and congratulations on your first PR to Oppia! 🎉 🥳\n` +
-              `By successfully resolving one more issue, you could be on your way to joining one of Oppia's esteemed core teams and get the collaborator rights.\n\n` +
+              `Feel free to take up a second issue if you'd like to help out more!\n\n` +
               `Developer onboarding lead : ${mention}`;
             } else if (prCount === 2) {
               message = `@${author} Congratulations on your second merged PR to Oppia! 🎉 🥳\n` +
               `Since you've merged two PRs, you might be eligible to join the Oppia dev team as a collaborator. If you'd like to do that, please fill in [this form](https://forms.gle/NxPjimCMqsSTNUgu5). Thanks!\n\n` +
               `Developer onboarding lead : ${mention}`;
             }
-            console.log(`Message: ${message}`);
-            if(prCount === 1 || prCount === 2){
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: prNumber,
-              body: message
-            });}
-            
-            console.log(`Comment posted successfully on PR #${prNumber}`);
+
+            if (prCount === 1 || prCount === 2) {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: prNumber,
+                body: message
+              });
+            }
+        env:
+          PR_COUNT: ${{ steps.count-and-sanitize.outputs.PR_COUNT }}
+          AUTHOR: ${{ steps.count-and-sanitize.outputs.AUTHOR }}
