--- a/.github/workflows/2.yml
+++ b/.github/workflows/2.yml
@@ -14,68 +14,64 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set intermediate environment variables
-        run: |
-          echo "AUTHOR=${{ github.event.pull_request.user.login }}" >> $GITHUB_ENV
-          echo "REPO=${{ github.repository }}" >> $GITHUB_ENV
-          echo "OWNER=${{ github.repository_owner }}" >> $GITHUB_ENV
-
       - name: Count merged PRs
+        id: count-prs
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const author = process.env.AUTHOR;
-            const [owner, repo] = process.env.REPO.split('/');
-
-            // Validate inputs directly
-            const loginPattern = /^[a-zA-Z0-9-]{1,39}$/;
-            const repoPattern = /^[a-zA-Z0-9._-]+$/;
-
-            if (!loginPattern.test(author)) {
-              throw new Error(`Invalid login: ${author}`);
-            }
-            if (!loginPattern.test(owner)) {
-              throw new Error(`Invalid owner: ${owner}`);
-            }
-            if (!repoPattern.test(repo)) {
-              throw new Error(`Invalid repo: ${repo}`);
-            }
+            const author = context.payload.pull_request.user.login;
+            const repo = context.repo.repo;
+            const owner = context.repo.owner;
 
             const { data } = await github.rest.search.issuesAndPullRequests({
               q: `repo:${owner}/${repo} type:pr state:closed author:${author}`
             });
             const prCount = data.items.filter(pr => pr.pull_request.merged_at).length;
 
-            core.exportVariable('PR_COUNT', prCount);
-            core.exportVariable('AUTHOR', author);
+            return { prCount, author, repo, owner };
+
+      - name: Set environment variables
+        env:
+          PR_COUNT: ${{ steps.count-prs.outputs.prCount }}
+          AUTHOR: ${{ steps.count-prs.outputs.author }}
+          REPO: ${{ steps.count-prs.outputs.repo }}
+          OWNER: ${{ steps.count-prs.outputs.owner }}
+        run: |
+          echo "PR_COUNT=${PR_COUNT}" >> $GITHUB_ENV
+          echo "AUTHOR=${AUTHOR}" >> $GITHUB_ENV
+          echo "REPO=${REPO}" >> $GITHUB_ENV
+          echo "OWNER=${OWNER}" >> $GITHUB_ENV
 
       - name: Comment on the PR
         uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const prCount = parseInt(process.env.PR_COUNT);
-            const author = process.env.AUTHOR;
-            const mention = 'HardikGoyal2003';
-            const prNumber = context.payload.pull_request.number;
+        env:
+          PR_COUNT: ${{ env.PR_COUNT }}
+          AUTHOR: ${{ env.AUTHOR }}
+          REPO: ${{ env.REPO }}
+          OWNER: ${{ env.OWNER }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const prCount = parseInt(process.env.PR_COUNT);
+          const author = process.env.AUTHOR;
+          const mention = 'HardikGoyal2003';  // Update this if the mention needs to change
+          const prNumber = context.payload.pull_request.number;
 
-            let message;
-            if (prCount === 1) {
-              message = `Thanks @${author}, and congratulations on your first PR to Oppia! 🎉 🥳\n` +
-                        `Feel free to take up a second issue if you'd like to help out more!\n\n` +
-                        `Developer onboarding lead : @${mention}`;
-            } else if (prCount === 2) {
-              message = `@${author} Congratulations on your second merged PR to Oppia! 🎉 🥳\n` +
-                        `Since you've merged two PRs, you might be eligible to join the Oppia dev team as a collaborator. If you'd like to do that, please fill in [this form](https://forms.gle/NxPjimCMqsSTNUgu5). Thanks!\n\n` +
-                        `Developer onboarding lead : @${mention}`;
-            }
+          let message;
+          if (prCount === 1) {
+            message = `Thanks @${author}, and congratulations on your first PR to Oppia! 🎉 🥳\n` +
+            `Feel free to take up a second issue if you'd like to help out more!\n\n` +
+            `Developer onboarding lead : @${mention}`;
+          } else if (prCount === 2) {
+            message = `@${author} Congratulations on your second merged PR to Oppia! 🎉 🥳\n` +
+            `Since you've merged two PRs, you might be eligible to join the Oppia dev team as a collaborator. If you'd like to do that, please fill in [this form](https://forms.gle/NxPjimCMqsSTNUgu5). Thanks!\n\n` +
+            `Developer onboarding lead : @${mention}`;
+          }
 
-            if (prCount === 1 || prCount === 2) {
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: prNumber,
-                body: message
-              });
-            }
+          if (prCount === 1 || prCount === 2) {
+            await github.rest.issues.createComment({
+              owner: process.env.OWNER,
+              repo: process.env.REPO,
+              issue_number: prNumber,
+              body: message
+            });
