--- a/.github/workflows/2.yml
+++ b/.github/workflows/2.yml
@@ -14,34 +14,39 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Count merged PRs
-        id: count-prs
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const author = context.payload.pull_request.user.login;
-            const repo = context.repo.repo;
-            const owner = context.repo.owner;
-
-            const { data } = await github.rest.search.issuesAndPullRequests({
-              q: `repo:${owner}/${repo} type:pr state:closed author:${author}`
-            });
-            const prCount = data.items.filter(pr => pr.pull_request.merged_at).length;
-
-            return { prCount, author, repo, owner };
-
       - name: Set environment variables
         env:
-          PR_COUNT: ${{ steps.count-prs.outputs.prCount }}
-          AUTHOR: ${{ steps.count-prs.outputs.author }}
-          REPO: ${{ steps.count-prs.outputs.repo }}
-          OWNER: ${{ steps.count-prs.outputs.owner }}
+          AUTHOR: ${{ github.event.pull_request.user.login }}
+          REPO: ${{ github.event.repository.name }}
+          OWNER: ${{ github.event.repository.owner.login }}
         run: |
-          echo "PR_COUNT=${PR_COUNT}" >> $GITHUB_ENV
           echo "AUTHOR=${AUTHOR}" >> $GITHUB_ENV
           echo "REPO=${REPO}" >> $GITHUB_ENV
           echo "OWNER=${OWNER}" >> $GITHUB_ENV
+
+      - name: Count merged PRs
+        uses: actions/github-script@v6
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          AUTHOR: ${{ env.AUTHOR }}
+          REPO: ${{ env.REPO }}
+          OWNER: ${{ env.OWNER }}
+        script: |
+          const author = process.env.AUTHOR;
+          const repo = process.env.REPO;
+          const owner = process.env.OWNER;
+
+          const { data } = await github.rest.search.issuesAndPullRequests({
+            q: `repo:${owner}/${repo} type:pr state:closed author:${author}`
+          });
+          const prCount = data.items.filter(pr => pr.pull_request.merged_at).length;
+
+          core.exportVariable('PR_COUNT', prCount);
+
+      - name: Set PR_COUNT environment variable
+        env:
+          PR_COUNT: ${{ steps.count-prs.outputs.PR_COUNT }}
+        run: echo "PR_COUNT=${PR_COUNT}" >> $GITHUB_ENV
 
       - name: Comment on the PR
         uses: actions/github-script@v6
