--- a/.github/workflows/2.yml
+++ b/.github/workflows/2.yml
@@ -8,7 +8,7 @@ permissions: write-all
 
 jobs:
   comment-on-merge:
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'develop'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -24,59 +24,60 @@ jobs:
           echo "REPO=${REPO}" >> $GITHUB_ENV
           echo "OWNER=${OWNER}" >> $GITHUB_ENV
 
+      - name: Debug environment variables
+        run: |
+          echo "AUTHOR=${AUTHOR}"
+          echo "REPO=${REPO}"
+          echo "OWNER=${OWNER}"
+
       - name: Count merged PRs
+        id: count-prs
         uses: actions/github-script@v6
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          AUTHOR: ${{ env.AUTHOR }}
-          REPO: ${{ env.REPO }}
-          OWNER: ${{ env.OWNER }}
-        script: |
-          const author = process.env.AUTHOR;
-          const repo = process.env.REPO;
-          const owner = process.env.OWNER;
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const author = process.env.AUTHOR;
+            const repo = process.env.REPO;
+            const owner = process.env.OWNER;
 
-          const { data } = await github.rest.search.issuesAndPullRequests({
-            q: `repo:${owner}/${repo} type:pr state:closed author:${author}`
-          });
-          const prCount = data.items.filter(pr => pr.pull_request.merged_at).length;
+            const { data } = await github.rest.search.issuesAndPullRequests({
+              q: `repo:${owner}/${repo} type:pr state:closed author:${author}`
+            });
+            const prCount = data.items.filter(pr => pr.pull_request.merged_at).length;
 
-          core.exportVariable('PR_COUNT', prCount);
+            return { prCount };
 
       - name: Set PR_COUNT environment variable
-        env:
-          PR_COUNT: ${{ steps.count-prs.outputs.PR_COUNT }}
-        run: echo "PR_COUNT=${PR_COUNT}" >> $GITHUB_ENV
+        run: echo "PR_COUNT=${{ steps.count-prs.outputs.prCount }}" >> $GITHUB_ENV
+
+      - name: Debug PR_COUNT variable
+        run: echo "PR_COUNT=${{ env.PR_COUNT }}"
 
       - name: Comment on the PR
         uses: actions/github-script@v6
-        env:
-          PR_COUNT: ${{ env.PR_COUNT }}
-          AUTHOR: ${{ env.AUTHOR }}
-          REPO: ${{ env.REPO }}
-          OWNER: ${{ env.OWNER }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const prCount = parseInt(process.env.PR_COUNT);
-          const author = process.env.AUTHOR;
-          const mention = 'HardikGoyal2003';  // Update this if the mention needs to change
-          const prNumber = context.payload.pull_request.number;
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const prCount = parseInt(process.env.PR_COUNT);
+            const author = process.env.AUTHOR;
+            const mention = 'HardikGoyal2003';  // Update this if the mention needs to change
+            const prNumber = context.payload.pull_request.number;
 
-          let message;
-          if (prCount === 1) {
-            message = `Thanks @${author}, and congratulations on your first PR to Oppia! 🎉 🥳\n` +
-            `Feel free to take up a second issue if you'd like to help out more!\n\n` +
-            `Developer onboarding lead : @${mention}`;
-          } else if (prCount === 2) {
-            message = `@${author} Congratulations on your second merged PR to Oppia! 🎉 🥳\n` +
-            `Since you've merged two PRs, you might be eligible to join the Oppia dev team as a collaborator. If you'd like to do that, please fill in [this form](https://forms.gle/NxPjimCMqsSTNUgu5). Thanks!\n\n` +
-            `Developer onboarding lead : @${mention}`;
-          }
+            let message;
+            if (prCount === 1) {
+              message = `Thanks @${author}, and congratulations on your first PR to Oppia! 🎉 🥳\n` +
+              `Feel free to take up a second issue if you'd like to help out more!\n\n` +
+              `Developer onboarding lead : @${mention}`;
+            } else if (prCount === 2) {
+              message = `@${author} Congratulations on your second merged PR to Oppia! 🎉 🥳\n` +
+              `Since you've merged two PRs, you might be eligible to join the Oppia dev team as a collaborator. If you'd like to do that, please fill in [this form](https://forms.gle/NxPjimCMqsSTNUgu5). Thanks!\n\n` +
+              `Developer onboarding lead : @${mention}`;
+            }
 
-          if (prCount === 1 || prCount === 2) {
-            await github.rest.issues.createComment({
-              owner: process.env.OWNER,
-              repo: process.env.REPO,
-              issue_number: prNumber,
-              body: message
-            });
+            if (prCount === 1 || prCount === 2) {
+              await github.rest.issues.createComment({
+                owner: process.env.OWNER,
+                repo: process.env.REPO,
+                issue_number: prNumber,
+                body: message
+              });
