--- a/.github/workflows/2.yml
+++ b/.github/workflows/2.yml
@@ -37,6 +37,7 @@ jobs:
               q: `repo:${owner}/${repo} type:pr state:closed author:${author}`
             });
             const prCount = data.items.filter(pr => pr.pull_request.merged_at).length;
+            console.log(`PR Count: ${prCount}`);
             core.exportVariable('PR_COUNT', prCount);
 
       - name: Debug PR_COUNT variable
@@ -51,8 +52,13 @@ jobs:
             const author = process.env.AUTHOR;
             const mention = 'HardikGoyal2003';  // Update this if the mention needs to change
             const prNumber = context.payload.pull_request.number;
+
+            console.log(`PR Count: ${prCount}`);
+            console.log(`Author: ${author}`);
+            console.log(`PR Number: ${prNumber}`);
+
             let message;
-            if (prCount === 30) {
+            if (prCount < 50) {
               message = `Thanks @${author}, and congratulations on your first PR to Oppia! 🎉 🥳\n` +
               `Feel free to take up a second issue if you'd like to help out more!\n\n` +
               `Developer onboarding lead : @${mention}`;
